--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Created by https://www.gitignore.io/api/windows,macos,intellij,sublimetext,ruby
+# Created by https://www.gitignore.io/api/windows,macos,intellij,sublimetext,ruby,jekyll
 
 ### Windows ###
 # Windows image file caches
@@ -186,3 +186,11 @@ build-iPhoneSimulator/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+
+# Created by https://www.gitignore.io/api/jekyll
+
+### Jekyll ###
+_site/
+.sass-cache/
+.jekyll-metadata
