--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ members:
     img: henry.jpg
     social:
     - title: envelope
-      url: mailto:henryskorpe+makerspace@gmail.com  
+      url: mailto:henryskorpe+makerspace@gmail.com
 
   - name: Philipp Zirpins
     position: position
@@ -116,20 +116,20 @@ members:
 
 # Clients information. Shown on Home and About pages.
 clients:
-  - name: dribbble
-    img: client01.png
-  - name: Code is Poetry
-    img: client02.png
-  - name: Vimeo
-    img: client03.png
-  - name: VimeoPro
-    img: client04.png
+  - name: NTNU
+    img: logo_ntnu_u-slagord.png
+  # - name: Code is Poetry
+  #   img: client02.png
+  # - name: Vimeo
+  #   img: client03.png
+  # - name: VimeoPro
+  #   img: client04.png
 
 # Short text about your company. Shown in footer on every page and also separately on Home and Contact page.
-about: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s."
+about: "We make awesome happen!"
 
 # Testimonial content. Shown on Home and About page.
 testimonial:
-    message: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
-    author: Marcel Newman
-    position: WEB DESIGNER - BLACKTIE.CO
+    message: "The folks at Makerspace-IDI is amazing"
+    author: Prof. Pekka Kalevi Abrahamsson
+    position: Tech Guru
