anonymous female profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ members:
   - name: Uyen Dan Nguyen (Mimi)
     position: position
     text: Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-    img: anonym.jpg
+    img: anonym_f.jpg
 
 # Clients information. Shown on Home and About pages.
 clients:
