fix profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ members:
   - name: Hung Quang Thieu
     position: position
     text: Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-    img: anonym.jpg
+    img: anonym_m.jpg
 
   - name: Håvard Anda Estensen
     position: position
